# coin-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: launch.json
coin_agent/: __main__.py  cli.py
coin_agent/agents/: allocator.py  base.py  orchestrator.py  registry.py
coin_agent/agents/strategies/: __init__.py  alpha_agent.py  breakout_agent.py  claude_agent.py  codex_agent.py  hybrid_agent.py  mean_reversion_agent.py  momentum_agent.py  sma_agent.py  steady_guard_agent.py  turbo_breakout_agent.py
coin_agent/ai/: fallback.py  prompts.py  provider.py
coin_agent/config/: settings.py
coin_agent/dashboard/: api.py  server.py
coin_agent/dashboard/static/: index.html
coin_agent/engine/: loop.py
coin_agent/exchange/: bithumb_client.py  market_data.py
coin_agent/execution/: broker.py  position_tracker.py
coin_agent/models/: agent.py  performance.py  trading.py
coin_agent/performance/: leaderboard.py  scorer.py  tracker.py
coin_agent/risk/: agent_risk.py  circuit_breaker.py  portfolio_risk.py
coin_agent/session/: evolution.py  manager.py  session.py
coin_agent/storage/: jsonl_store.py  state_store.py
coin_agent/utils/: indicators.py  logging_setup.py  math_helpers.py
guidelines/: agent_behavior.md  emergency_protocol.md  market_conditions.md  risk_management.md  trading_rules.md
tests/: test_agents.py  test_ai_provider.py  test_allocator.py  test_alpha_agent.py  test_broker.py  test_dashboard.py  test_indicators.py  test_loop.py  test_math_helpers.py  test_orchestrator.py  test_risk.py
