[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coin-agent"
version = "0.1.0"
description = "Multi-agent competitive crypto auto-trading system for Bithumb"
requires-python = ">=3.11"
authors = [{ name = "coin-agent" }]

[project.scripts]
coin-agent = "coin_agent.cli:main"

[tool.setuptools.packages.find]
include = ["coin_agent*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
